# sk_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  deploy.sh  pyproject.toml
.github/actions/python-poetry/: action.yml
.github/workflows/: deploy.yml
app/application/: container.py  mediator.py
app/application/base/: exception.py
app/application/certificates/commands/: __init__.py  create_certificate.py  create_certificate_group.py  delete_certificate.py  delete_certificate_group.py  patch_certificate_group_order.py  patch_certificate_order.py  update_certificate.py  update_certificate_group.py
app/application/certificates/queries/: __init__.py  get_certificate_by_id.py  get_certificate_group_by_id.py  get_certificate_groups_list.py  get_certificates_list.py
app/application/common/: exceptions.py
app/application/media/: exceptions.py
app/application/media/commands/: __init__.py  media.py  upload.py
app/application/members/: __init__.py
app/application/members/commands/: __init__.py  create.py  delete.py  patch_order.py  update.py
app/application/members/queries/: __init__.py  get_by_id.py  get_list.py
app/application/news/: __init__.py
app/application/news/commands/: __init__.py  create.py  delete.py  update.py
app/application/news/queries/: __init__.py  count_many.py  find_many.py  get_by_id.py  get_by_slug.py  get_list.py
app/application/portfolios/commands/: __init__.py  create.py  delete.py  update.py
app/application/portfolios/queries/: __init__.py  count_many.py  (+4 more)
app/application/seo_settings/: __init__.py
app/application/vacancies/: __init__.py
app/domain/base/: entity.py  exceptions.py  file_storage.py
app/domain/members/: __init__.py
app/infrastructure/s3/: base.py  client.py  dummy.py  storage.py
app/presentation/api/: auth.py  dependencies.py  exceptions.py  filters.py  main.py  schemas.py
app/presentation/consumer/: converter.py  main.py
app/settings/: bitrix.py  config.py  email.py  mongo.py  postgres.py  rabbitmq.py  s3.py
app/tests/: conftest.py  fixtures.py
docker_compose/: app.yaml  mail.yaml  messaging.yaml  s3.yaml  storages.yaml
(+392 files in other folders)
