[project]
name = "sk_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "chapppington",email = "stas.mega.96@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "authx (>=1.5.0,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "punq (>=0.7.0,<0.8.0)",
    "black (>=25.12.0,<26.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "faststream[rabbit] (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
force_single_line=false
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "**/migrations/**",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["application","domain","infrastructure","presentation","settings","tests"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "**/migrations/**",
]

[tool.ruff.lint]
ignore = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
isort = "^7.0.0"
ruff = "^0.14.13"
faker = "^40.1.2"
pre-commit = "^4.5.1"

